@startuml init3

class Book{

}

class LibrarySystem{
    + checkoutBook(Book)
    + returnBook(Book)
    + addBook(Book)
    + removeBook(Book)
    + getBooksByAuthor(String author)
    + getBookByArea(String area)
    + getCheckedoutBookByBorrower(User)
    + getBorrowerByBook(Book)
    + handleReq(User)
}

LibrarySystem --> Book

class User{

}

together{
    class Staff{

    }

    class Borrower{

    }
}

User -- LibrarySystem
User <|-- Staff
User <|-- Borrower

note bottom of LibrarySystem
if(req == transaction 1, 2, 4, 5 and user == staff)
    req()
else if(req == transaction 4 and user == borrower and borrower is self)
    req()
else if(req == transaction 3)
    req()
end note

@enduml